# VacuumCleaner

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
TgBotDev/: CMakeLists.txt  telegram_bot_log.txt
TgBotDev/headers/: keys.h
TgBotDev/src/: main.cpp  methods.cpp
TgBotLinux/: CMakeLists.txt  Dockerfile
TgBotLinux/src/: main.cpp
TgBotMacOs/: CMakeLists.txt  telegram_bot_log.txt
TgBotMacOs/headers/: keys.h  methods.h
lib/docker/: cli-plugins
src/: main.cpp
